--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "photo-share",
+  "name": "vue-photo-share",
   "version": "1.0.0",
   "description": "Pinterest clone sample application",
   "main": "server.js",
